Adjusted the map in contact section and added border to images in project details

--- a/myPortfolio/assets/css/main.css
+++ b/myPortfolio/assets/css/main.css
@@ -1295,7 +1295,7 @@ section,
 --------------------------------------------------------------*/
 
 .portfolio-details{
-  background: #FFE6D0;
+  background: #ffffff;
 }
 
 .portfolio-details .portfolio-details-slider img {
