--- a/myPortfolio/assets/css/main.css
+++ b/myPortfolio/assets/css/main.css
@@ -696,6 +696,7 @@ section,
   line-height: 1;
   text-transform: uppercase;
   margin-bottom: 10px;
+  margin-top: 0;
   transition: all 0.3s ease-in-out;
 }
 
