--- a/myPortfolio/assets/css/main.css
+++ b/myPortfolio/assets/css/main.css
@@ -537,9 +537,9 @@ section,
   z-index: 2;
 }
 
-.hero .container {
+.hero .herotitle {
   position: relative;
-  z-index: 3;
+  z-index: 1;
 }
 
 .hero h2 {
